--- a/index.html
+++ b/index.html
@@ -1,37 +1,48 @@
 <!DOCTYPE html>
 <html lang="fr">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="./assets/css/style.css">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-        <title>Application AFPA</title>
-    </head>
-    <body>
-        <main>
-            <div  class=" mt-5 container shadow p-3 mb-5 bg-body-tertiary rounded text-center w-25">
-            <h1>BIENVENUE SUR L'APPLICATION AFPA</h1>
-            <img src="../image afpa/logo-afpa.jpg" alt="Logo AFPA">
-            <form method="get" action="./userDetails.html">
-                <fieldset>
-                    <legend>Accès à votre espace privé </legend>
-                    <h2>Vous avez déjà un compte ?</h2>
-                    <h2>Connectez-vous</h2>
-                    <label class="mb-2">
-                        Identifiant : <input type="text" name="" id="" placeholder="mail@example.fr">
-                    </label>
-                
-                    <label for="">
-                        Mot de passe : <input type="password" name="" id="">
-                    </label>
-                
-                    <input type="submit" value="Connexion" >
-                </fieldset>
-                <h2>Pas encore de compte</h2>
-                <a href="./inscription.html">Inscription</a>
-            </form>
-       </div> 
-    </main></span>
-    </body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+      crossorigin="anonymous"
+    ></script>
+    <title>Application AFPA</title>
+  </head>
+  <body>
+    <main>
+      <div
+        class="mt-5 container shadow p-3 mb-5 bg-body-tertiary rounded text-center w-25"
+      >
+        <h1>BIENVENUE SUR L'APPLICATION AFPA</h1>
+        <img src="../image afpa/logo-afpa.jpg" alt="Logo AFPA" />
+        <form method="get" action="./userDetails.html">
+          <fieldset>
+            <legend>Accès à votre espace privé</legend>
+            <h2>Vous avez déjà un compte ?</h2>
+            <h2>Connectez-vous</h2>
+            <label class="mb-2">
+              Identifiant :
+              <input type="text" name="" id="" placeholder="mail@example.fr" />
+            </label>
+            <label for="">
+              Mot de passe : <input type="password" name="" id="" />
+            </label>
+
+            <input type="submit" value="Connexion" />
+          </fieldset>
+          <h2>Pas encore de compte</h2>
+          <a href="./inscription.html">Inscription</a>
+        </form>
+      </div>
+    </main>
+  </body>
 </html>
